# vocalpy

./: .all-contributorsrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  Makefile  conf.py  index.md
docs/api/: index.rst
docs/fa2023/: FA2023_template.tex  fa2023.sty  forum-acusticum-2023.bib  main.tex
docs/getting_started/: index.md  installation.md  quickstart.md
docs/reference/: about.md  index.md
docs/tutorial/: index.md  vocalpy-in-15-minutes.md
docs/user/: background.md  index.md  whatisvocalpy.md
docs/user/howto/: index.md  segmentation-ir-metrics.md  segmentation.md  use-vocalpy-with-UMAP-and-HDBSCAN.md  use-vocalpy-with-scikit-learn.md
src/: dataset-model.ipynb
src/scripts/: attrs-sqlalchemy.ipynb  carpentries-sql-practice.ipynb  dataclass-orm.ipynb  dataset.ipynb  make_example_data.py  make_example_data_tars.py  similarity.ipynb  similarity.py  sqlite-python-tutorial.ipynb  vocalpy-orm.py  vocalpy-sqlalchemy-orm.ipynb
src/vocalpy/: __about__.py  __init__.py  annotation.py  annotation_file.py  audio.py  audio_file.py  constants.py  dataset.py  dataset_file.py  feature_extractor.py  feature_file.py  features.py  params.py  paths.py  segmenter.py  segments.py  sequence.py  sound.py  spect_maker.py  spectrogram.py  spectrogram_file.py  spectrogram_maker.py  spectrogram_parameters.py  unit.py  validators.py
src/vocalpy/_spectrogram/: data_type.py
src/vocalpy/_vendor/: __init__.py  evfuncs.py
src/vocalpy/annotation/: __init__.py
src/vocalpy/classes/: __init__.py
src/vocalpy/dataclasses/: audio.py  spectrogram.py
src/vocalpy/dataset/: __init__.py  orm.py  repository.py  sequence.py
src/vocalpy/dataset/domain_model/: __init__.py  audio_file.py  dataset.py  dataset_file.py  feature_file.py  spectrogram_parameters.py
src/vocalpy/dataset/models/: __init__.py  sequence.py
src/vocalpy/dataset/schema/: sequence.py
src/vocalpy/domain_model/: __init__.py  annotation_file.py  audio.py  sequence.py
src/vocalpy/domain_model/entities/: __init__.py  audio.py  dataset.py  sequence.py  spectrogram.py  spectrogram_file.py  unit.py
src/vocalpy/domain_model/services/: __init__.py  segmenter.py  spectrogram_maker.py
src/vocalpy/examples/: BM003.wav.description.txt  WhiLbl0010.description.txt  __init__.py  _examples.py  _registry.py  bfsongrepo.description.txt  bl26lb16.wav.description.txt  deermouse-go.wav.description.txt  example-metadata.json  example_data.py  fruitfly-song-multichannel.wav.description.txt  twopup.description.txt  zblib.description.txt  zebra-finch-SAP.description.txt
src/vocalpy/feature/: __init__.py  _sat.py  sat.py
src/vocalpy/feature/_biosound/: __init__.py  constants.py  detect_peaks.py  features.py  fundamental.py  signal.py  sound.py
src/vocalpy/feature/soundsig/: __init__.py  detect_peaks.py  (+4 more)
src/vocalpy/metrics/: __init__.py
src/vocalpy/paths/: __init__.py  paths.py
src/vocalpy/plot/: __init__.py  annot.py  spect.py
src/vocalpy/repository/: __init__.py  base.py  repository.py  sqlalchemy.py
src/vocalpy/segment/: __init__.py  audio_amplitude.py  ava.py  ava_segmenter.py  energy.py  meansquared.py  mupet.py  smoothed_energy.py
src/vocalpy/signal/: __init__.py  audio.py  energy.py  filter.py  preprocess.py  segment.py  spectrogram.py
src/vocalpy/similarity/: sat.py
src/vocalpy/spectral/: __init__.py  sat.py  soundsig.py
src/vocalpy/transition_diagram_code/: README.md  pyproject.toml
src/vocalpy/transition_diagram_code/seqanalysis/transition_diagram/: chunkextraktion_chi2.py  do_transition_matrix.py  template.yaml
src/vocalpy/transition_diagram_code/seqanalysis/util/: calc_matrix_transition_diagram.py  filter_functions.py  get_data_transition_diagram.py  logging.py  plot_transition_diagram_functions.py
src/vocalpy/validators/: __init__.py  attrs.py  validators.py
src/vocles/: __init__.py
src/vocles/classes/: audio.py  spectrogram.py
src/vocles/path/: __init__.py  accessor.py  array.py
src/vocles/paths/: base.py
tests/: conftest.py  test_annotation_file.py  test_audio.py  test_audio_file.py  test_dataset.py  test_feature_extractor.py  test_params.py  test_paths.py  test_segmenter.py  test_segments.py  test_sequence.py  test_sound.py  test_spect_maker.py  test_spectrogram.py  test_spectrogram_file.py  test_spectrogram_maker.py  test_unit.py
tests/fixtures/: __init__.py  annot.py  audio.py  dask.py  datasets.py  paths.py  segments.py  spect.py  test_data.py
tests/scripts/: __init__.py  generate_data_for_tests.py  test-ava-segment.ipynb  vignette-ava-segment.ipynb
tests/scripts/generate_ava_segment_test_data/: generate_ava_segment_test_data.py  generate_ava_segment_text_files_from_jourjine_et_al_2023.py  generate_test_audio_for_ava_segment_from_jourjine_etal_2023.py
tests/scripts/soundsig-test-data/: generate_test_data.py  pyproject.toml
tests/test__spectrogram/: test_data_type.py
tests/test_dataclasses/: test_audio.py  test_spectrogram.py
tests/test_dataset/: test_repository.py  test_sequence.py
tests/test_domain_model/: test_annotation_file.py  test_audio.py  test_dataset.py
tests/test_domain_model/test_entities/: test_annotation_file.py  test_audio.py  test_audio_file.py  test_dataset.py  test_spectrogram_file.py
tests/test_domain_model/test_services/: test_segmenter.py  test_spectrogram_maker.py
tests/test_examples/: test__examples.py  test__registry.py  test_example_data.py
tests/test_feature/: test_sat.py
tests/test_feature/test__biosound/: test_features.py
tests/test_metrics/test_segmentation/: test__ir_helper.py  test_ir.py
tests/test_path/: test_accessor.py
tests/test_segment/: test_audio_amplitude.py  test_ava.py  test_energy.py  test_meansquared.py
tests/test_signal/: test_audio.py  test_energy.py
tests/test_spectral/: test_sat.py
tests/test_validators/: test_validators.py
tests/test_vendor/: test_evfuncs.py
(+6 files in other folders)
